# urfitio

./: .flake8  Dockerfile  pyproject.toml
app/: config.py  dependencies.py  main.py  util.py
app/core/: base_api.py  config.py
app/models/: chat.py  claude_request.py  llm_request.py  school.py
app/routers/: chat_router.py  crud_router.py  static_router.py
app/services/: cache_service.py  claude_service.py  llm_service.py  rag_service.py
app/static/: style.css
app/templates/: index.html
