[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tucker Baca <tj.baca14@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
faiss-cpu = "^1.9.0.post1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
jinja2 = "^3.1.5"
mypy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
